<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.record.SoundRecordActivity">

    <TableLayout
        android:layout_width="319dp"
        android:layout_height="402dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/nameTextView"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:text="@string/name" />

            <EditText
                android:id="@+id/nameEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/name_hint"
                android:inputType="textPersonName"
                android:text=""
                android:textColorHint="#546E7A" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/recordTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recording" />

            <com.ottfoekst.instanceplaybacker.ui.view.SoundToggleButton
                android:id="@+id/recordButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:textOff="@string/start_recording"
                android:textOn="@string/stop_recording" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/playTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/playing" />

            <com.ottfoekst.instanceplaybacker.ui.view.SoundToggleButton
                android:id="@+id/playButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:textOff="@string/start_playing"
                android:textOn="@string/stop_playing" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_span="2"
                android:onClick="registerSoundData"
                android:text="@string/register" />
        </TableRow>

    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>